--- a/src/ViewCreator.TestMvc/Views/Home/Index.cshtml
+++ b/src/ViewCreator.TestMvc/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 
 <body>
 
-    @Html.React("Label", new { })
+    @Html.React("Label", new { attributes = new { className = "test" } })
 
     @Html.ReactInitJavaScript()
 
