--- a/src/ViewCreator.TestMvc/Views/Home/Index.cshtml
+++ b/src/ViewCreator.TestMvc/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
 
 <body>
 
+    @Html.Render(new LoginVewModel())
     @Html.React("Label", new { attributes = new { className = "test" } })
 
     @Html.ReactInitJavaScript()
